tests/spec/emit/snapshots/result_in_tuple_literal.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn try_int(x: int) -> Result<int, string> {
    if x > 0 { Ok(x) } else { Err("negative") }
  }
  
  fn test() {
    let pair = (try_int(5), try_int(10));
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func tryInt(x int) lisette.Result[int, string] {
	if x > 0 {
		return lisette.MakeResultOk[int, string](x)
	}
	return lisette.MakeResultErr[int, string]("negative")
}

func test() {
	_ = lisette.MakeTuple2[lisette.Result[int, string], lisette.Result[int, string]](tryInt(5), tryInt(10))
}
