tests/spec/emit/snapshots/result_of_option.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<Option<int>, string> {
    Ok(Some(42))
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[lisette.Option[int], string] {
	return lisette.MakeResultOk[lisette.Option[int], string](lisette.MakeOptionSome(42))
}
