tests/spec/emit/snapshots/result_ok_construction.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<int, string> {
    Ok(42)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}
