tests/spec/emit/snapshots/result_ok_types_a_literal_of_another_default.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<float64, error> {
    let widened: Result<float64, error> = Ok(1)
    widened
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (float64, error) {
	widened := lisette.MakeResultOk[float64, error](1)
	if widened.Tag == lisette.ResultOk {
		return widened.OkVal, nil
	}
	return 0.0, widened.ErrVal
}
