tests/spec/emit/snapshots/result_with_struct.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test() -> Result<Point, string> {\n  Ok(Point { x: 10, y: 20 })\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Point struct {
	x int
	y int
}

func test() lisette.Result[Point, string] {
	return lisette.MakeResultOk[Point, string](Point{
		x: 10,
		y: 20,
	})
}
