tests/spec/emit/snapshots/return_err_widens_concrete_error.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  struct AError { }
  
  impl AError {
    fn Error(self) -> string { "a failed" }
  }
  
  fn bail() -> Result<int, error> {
    return Err(AError {})
  }
  
  fn test() {
    match bail() {
      Ok(_) => panic("expected error"),
      Err(e) => {
        if e.Error() != "a failed" {
          panic("wrong returned error")
        }
      },
    }
  }
---
package main

type AError struct{}

func (a AError) Error() string {
	return "a failed"
}

func bail() (int, error) {
	return 0, AError{}
}

func test() {
	if _, e := bail(); e == nil {
		panic("expected error")
	} else {
		if e.Error() != "a failed" {
			panic("wrong returned error")
		}
	}
}
