tests/spec/emit/snapshots/return_err_widens_error_slot_through_adapter.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  interface Failing<T> {
    fn get() -> T
  }
  
  struct Boom {}
  
  impl Boom {
    fn get(self) -> Result<int, error> {
      Ok(1)
    }
  }
  
  fn bail() -> Result<int, Failing<Result<int, error>>> {
    return Err(Boom {})
  }
  
  fn main() {
    match bail() {
      Ok(_) => panic("expected error"),
      Err(_) => {},
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Failing[T any] interface {
	get() T
}

type Boom struct{}

func (b Boom) get() (int, error) {
	return 1, nil
}

func bail() (int, Failing[lisette.Result[int, error]]) {
	return 0, _lisAdapter_Boom_Failing_0{inner: Boom{}}
}

func main() {
	if _, err := bail(); err == nil {
		panic("expected error")
	}
}

type _lisAdapter_Boom_Failing_0 struct {
	inner Boom
}

func (a _lisAdapter_Boom_Failing_0) get() lisette.Result[int, error] {
	return lisette.ResultFromPair[int](a.inner.get())
}
