tests/spec/emit/snapshots/return_option_from_variable.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test(flag: bool) -> Option<int> {
    let result = if flag { Some(42) } else { None };
    result
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(flag bool) (int, bool) {
	var result lisette.Option[int]
	if flag {
		result = lisette.MakeOptionSome[int](42)
	} else {
		result = lisette.MakeOptionNone[int]()
	}
	if result.Tag == lisette.OptionSome {
		return result.SomeVal, true
	}
	return 0, false
}
