tests/spec/emit/snapshots/return_result_from_variable.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: "input: \nfn test(flag: bool) -> Result<int, string> {\n  let result = if flag { Ok(42) } else { Err(\"nope\") };\n  result\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(flag bool) lisette.Result[int, string] {
	var result lisette.Result[int, string]
	if flag {
		result = lisette.MakeResultOk[int, string](42)
	} else {
		result = lisette.MakeResultErr[int, string]("nope")
	}
	return result
}
